--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "express-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "initial-express",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "test"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/colmbegs89/initial-express.git"
-  },
-  "author": "Colm Begley",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/colmbegs89/initial-express/issues"
-  },
-  "homepage": "https://github.com/colmbegs89/initial-express#readme",
   "dependencies": {
-    "express-generator": "^4.15.5"
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.15.5",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.0",
+    "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.9"
   }
 }
